# kcli

./: .gitignore  Cargo.toml  PKGBUILD  README.md
src/: main.rs  pkg_manager.rs
