[package]
name = "kcli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.x", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.19.0"
thiserror = "1.0"
clap = { version = "3.0", features = ["derive"] }
dialoguer = "0.10"
anyhow = "1.0"
log = "0.4"
console = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
is-terminal = "0.1"
env_logger = "0.9"
shell-words = "1.1.0"
async-std = "1.12.0" # Check for the latest version
tar = "0.4.26" # Check for the latest version
zstd = "0.13.1"
walkdir = "2.3.1" # Check for the latest version
regex = "1.10.4"
futures = "0.3.30"
colored = "2.1.0"
nix = "0.23.0"
dirs-next = "2.0"
chrono = "0.4.38"
once_cell = "1.19.0"